crates/biome_html_parser/tests/html_specs/ok/svelte/await_basic.svelte
{#await promise}
  <p>Loading...</p>
{/await}
