crates/biome_html_parser/tests/html_specs/error/svelte/await_invalid_catch_only_with_clause.svelte
{#await promise catch error}
  <p>{error.message}</p>
{:catch anotherError}
  <p>{anotherError.message}</p>
{/await}
